--- a/styles/finder.less
+++ b/styles/finder.less
@@ -12,7 +12,7 @@
 }
 
 .fathom-finder .list-group {
-    margin: 0.5em 0 !important;
+    margin: 0.5em 0 0 0 !important;
 }
 
 // Highlight matched text
